@@ -47,9 +47,13 @@ loadTestDB :: FilePath -> IO (S.Either Doc PuppetDBAPI)
 loadTestDB fp =
     decodeFileEither fp >>= \case
         Left (OtherParseException rr) -> return (S.Left (string (show rr)))
+        Left (InvalidYaml Nothing) -> baseError "Unknown error"
+        Left (InvalidYaml (Just (YamlException s))) -> baseError (string s)
+        Left (InvalidYaml (Just (YamlParseException pb ctx (YamlMark _ l c)))) -> baseError $ red (string pb <+> string ctx) <+> "at line" <+> int l <> ", column" <+> int c
         Left _ -> S.Right <$> genDBAPI (newDB & backingFile ?~ fp )
         Right x -> fmap S.Right (genDBAPI (x & backingFile ?~ fp ))
-
+    where
+        baseError r = return $ S.Left $ "Could not parse" <+> string fp <> ":" <+> r
 
 initTestDB :: IO PuppetDBAPI
 initTestDB = genDBAPI newDB
